# mcp

./: .env.example  .gitignore  CLAUDE_CODE_GUIDE.md  Dockerfile  HUMMBOT-MCP-PLAN.md  HUMMBOT-SLIDES-ASCII.md  MANIFEST.in  README.md  docker-compose-api.yml  docker-compose.yml  main.py  pyproject.toml  server.json  server.py  trading_plan.md
.github/workflows/: docker-build.yml  publish-mcp.yml
config_examples/: claude_code_config.json  claude_code_config_docker.json
docs/plans/: reimagining-bots.md  skills-integration-comparison.md
hummingbot_mcp/: __init__.py  api_servers.py  exceptions.py  executor_preferences.py  hummingbot_client.py  local_deployment.py  middleware.py  response.py  schemas.py  server.py  settings.py
hummingbot_mcp/formatters/: __init__.py  base.py  bots.py  executors.py  market_data.py  portfolio.py  trading.py
hummingbot_mcp/guides/: dca_executor.md  lp_executor.md  order_executor.md  position_executor.md  swap_executor.md
hummingbot_mcp/prompts/: __init__.py  add_exchange.py  candles_feed.py  first_bot.py  grid_executor.py  position_executor.py  setup.py  troubleshoot.py
hummingbot_mcp/tools/: __init__.py  account.py  bot_management.py  controllers.py  executors.py  gateway.py  gateway_clmm.py  gateway_swap.py  gateway_trading.py  indicators.py  market_data.py  portfolio.py  trading.py
mcp_hummingbot/: __init__.py  exceptions.py  hummingbot_client.py  server.py  settings.py
mcp_hummingbot/client/: __init__.py  hummingbot.py
mcp_hummingbot/config/: __init__.py  settings.py
mcp_hummingbot/tools/: __init__.py  account.py
mcp_hummingbot/utils/: __init__.py  logging.py  validation.py
scripts/: setup_hummingbot_api.sh
services/: backend_api_client.py
skills/: README.md
skills/candles/: SKILL.md
skills/candles/scripts/: calculate_indicator.sh  get_candles.sh  get_funding_rate.sh  get_price.sh  list_candle_connectors.sh
skills/executors/: SKILL.md
skills/executors/scripts/: clear_position.sh  create_config.sh  create_executor.sh  deploy_bot.sh  describe_controller.sh  get_bot_status.sh  get_executor.sh  get_executor_schema.sh  get_executors_summary.sh  get_position.sh  get_positions.sh  list_controllers.sh  list_executor_types.sh  list_executors.sh  manage_bot.sh  stop_executor.sh
skills/keys/: SKILL.md
skills/keys/scripts/: add_credentials.sh  get_connector_config.sh  list_connectors.sh  (+2 more)
skills/setup/: SKILL.md
